<resources>
    <string name="app_name">Ninja Money</string>
    <string name="startScreen_slogan">Earn Mooney Track Mooney</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="username"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="category_array">
        <item>Food</item>
        <item>Clothing</item>
        <item>Living</item>
        <item>Education</item>
        <item>Treatment</item>
        <item>Investment</item>
        <item>Donation</item>
    </string-array>
    <string-array name="account">
        <item>Bank</item>
        <item>Mobile Banking</item>
        <item>Cash</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
